--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 <style>
 :root{ --ink:#e9ebef; --muted:#a9adb6; --stroke:rgba(255,255,255,.08); --panel:rgba(20,20,24,.5); }
 
-/* gradients */
+/* Background gradients */
 .bg-bio  { background: radial-gradient(1200px 600px at 10% 10%,  #0f172a 0%, #0b1220 55%, #070b12 100%); }
 .bg-soolo{ background: radial-gradient(1200px 600px at 90% 10%,  #1f1d55 0%, #2f2aa6 45%, #1b1761 100%); }
 .bg-teat { background: radial-gradient(1200px 600px at 10% 90%,  #5b0d0d 0%, #8b1e1e 40%, #2a0b0b 100%); }
 .bg-elek { background: radial-gradient(1200px 600px at 90% 90%,  #0a3b37 0%, #128277 40%, #072b29 100%); }
-/* inviting contact */
-.bg-ytx  { background: radial-gradient(1200px 600px at 50% 50%,  #1b2838 0%, #1a2634 40%, #121a25 100%); }
+/* inviting contact — warm, distinct from Bio */
+.bg-ytx  { background: radial-gradient(1200px 600px at 50% 50%,  #2a1b1b 0%, #3f2716 45%, #1b100a 100%); }
 
-/* themed text/accents */
+/* Themed text/accents (no plain white) */
 .theme-bio  { --ink:#E7EEF9; --accent:#9BC2FF; }
 .theme-soolo{ --ink:#EEE9FF; --accent:#B7A6FF; }
-.theme-teat { --ink:#FFE5E5; --accent:#FF9F9F; }
-.theme-elek { --ink:#D7FFF4; --accent:#7FFFE1; }
-.theme-ytx  { --ink:#FFEFD6; --accent:#FFC36E; } /* warm & inviting */
+.theme-teat { --ink:#D7FFF4; --accent:#7FFFE1; }
+.theme-elek { --ink:#FFE5E5; --accent:#FF9F9F; }
+.theme-ytx  { --ink:#FFEBDD; --accent:#FFB86B; }
 
 *{box-sizing:border-box}
 html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:var(--ink); transition:background .7s ease,color .3s ease; }
@@ -69,6 +69,14 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
 .embed{ width:100%; border-radius:12px; overflow:hidden; border:1px solid var(--stroke); background:rgba(255,255,255,.04); }
 .embed-16x9{ position:relative; padding-top:56.25%; }
 .embed-16x9 iframe{ position:absolute; inset:0; width:100%; height:100%; }
+
+/* Make Spotify fill 16:9 equally (scaled to cover) */
+.embed-16x9.spot-zoom{ overflow:hidden; }
+.embed-16x9.spot-zoom iframe{
+  position:absolute; top:50%; left:50%;
+  width:640px; height:152px; /* native Spotify size */
+  transform-origin:center; transform:translate(-50%,-50%) scale(var(--spot-scale,1));
+}
 </style>
 </head>
 <body class="bg-bio theme-bio">
@@ -110,7 +118,7 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
 <script src="https://unpkg.com/wavesurfer.js@7"></script>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  /* Slideshow */
+  /* ===== Slideshow ===== */
   const slides = document.querySelectorAll('.slide');
   let idx = 0;
   if (slides.length) {
@@ -121,7 +129,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }, 7000);
   }
 
-  /* Helpers */
+  /* ===== Helpers ===== */
   function audioCard(file, title, folder) {
     const url = 'audio/' + encodeURIComponent(folder) + '/' + encodeURIComponent(file);
     return (
@@ -182,7 +190,17 @@ document.addEventListener('DOMContentLoaded', () => {
     });
   }
 
-  /* Content (bio subtitle updated to Pedagogi + exact filenames) */
+  /* ===== Spotify scale to fill 16:9 ===== */
+  function scaleSpotify(){
+    document.querySelectorAll('.spot-zoom').forEach(box=>{
+      const r = box.getBoundingClientRect();
+      const scale = Math.max(r.width/640, r.height/152); // cover
+      box.style.setProperty('--spot-scale', scale);
+    });
+  }
+  window.addEventListener('resize', scaleSpotify);
+
+  /* ===== Content (with swaps + filenames) ===== */
   const content = {
     bio: `
       <section class="panel">
@@ -202,8 +220,8 @@ document.addEventListener('DOMContentLoaded', () => {
         <div class="soolo-card panel">
           <h3>Julkaisu</h3>
           <div class="soolo-embeds">
-            <!-- Spotify same 16:9 footprint as YouTube -->
-            <div class="embed embed-16x9">
+            <!-- Spotify 16:9, scaled to cover -->
+            <div class="embed embed-16x9 spot-zoom">
               <iframe loading="lazy" src="https://open.spotify.com/embed/track/4xiEQA4enJbKFnzzgcbjqj" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture"></iframe>
             </div>
             <div class="embed embed-16x9">
@@ -269,9 +287,25 @@ document.addEventListener('DOMContentLoaded', () => {
     `
   };
 
-  /* Background + theme + nav highlight */
-  const bgClass = { bio:'bg-bio', soolotuotanto:'bg-soolo', teatteri:'bg-teat', elektroninen:'bg-elek', yhteys:'bg-ytx' };
-  const themeClass = { bio:'theme-bio', soolotuotanto:'theme-soolo', teatteri:'theme-teat', elektroninen:'theme-elek', yhteys:'theme-ytx' };
+  /* ===== Color SWAPS requested =====
+     - Bio ↔︎ Soolotuotanto
+     - Teatteri ↔︎ Elektroninen
+     - Yhteys = its own warm palette
+  */
+  const bgClass = {
+    bio:'bg-soolo',            // swapped
+    soolotuotanto:'bg-bio',   // swapped
+    teatteri:'bg-elek',       // swapped
+    elektroninen:'bg-teat',   // swapped
+    yhteys:'bg-ytx'
+  };
+  const themeClass = {
+    bio:'theme-soolo',
+    soolotuotanto:'theme-bio',
+    teatteri:'theme-elek',
+    elektroninen:'theme-teat',
+    yhteys:'theme-ytx'
+  };
 
   function applyTheme(cat){
     document.body.className = (bgClass[cat]||'bg-bio') + ' ' + (themeClass[cat]||'theme-bio');
@@ -286,6 +320,7 @@ document.addEventListener('DOMContentLoaded', () => {
     area.innerHTML = content[cat];
     destroyPlayers();
     wirePlayers(area);
+    scaleSpotify(); // keep embeds visually equal
   }
   window.addEventListener('hashchange', renderFromHash);
   renderFromHash();
