--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Niko Aaltonen — Portfolio</title>
+<link rel="preload" as="audio" href="audio/soolotuotanto/Halusin%20Kertoo.mp3">
 <style>
 :root{
   --ink:#e9ebef; --muted:#a9adb6; --stroke:rgba(255,255,255,.08); --panel:rgba(20,20,24,.5);
   --wave-base: rgba(255,255,255,.35); /* unplayed waveform color */
 }
 
-/* Background gradients */
-.bg-bio  { background: radial-gradient(1200px 600px at 10% 10%,  #0f172a 0%, #0b1220 55%, #070b12 100%); }
-.bg-soolo{ background: radial-gradient(1200px 600px at 90% 10%,  #1f1d55 0%, #2f2aa6 45%, #1b1761 100%); }
-.bg-teat { background: radial-gradient(1200px 600px at 10% 90%,  #5b0d0d 0%, #8b1e1e 40%, #2a0b0b 100%); }
-.bg-elek { background: radial-gradient(1200px 600px at 90% 90%,  #0a3b37 0%, #128277 40%, #072b29 100%); }
-/* inviting contact — warm, distinct */
-.bg-ytx  { background: radial-gradient(1200px 600px at 50% 50%,  #2a1b1b 0%, #3f2716 45%, #1b100a 100%); }
+/* Background gradients (used by JS cross-fade layers) */
+ /* names preserved for reference; actual application happens via JS */
 
 /* Themed text/accents */
 .theme-bio  { --ink:#E7EEF9; --accent:#9BC2FF; }
@@ -26,7 +22,17 @@
 .theme-ytx  { --ink:#FFEBDD; --accent:#FFB86B; }
 
 *{box-sizing:border-box}
-html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:var(--ink); transition:background .7s ease,color .3s ease; }
+html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:var(--ink); transition:color .3s ease; }
+
+/* Cross-fading background layers */
+.bg-base, .bg-fade{
+  position: fixed; inset: 0; z-index: -2;
+  transition: opacity .8s ease;
+  background: #0b1220; /* fallback */
+}
+.bg-base { opacity: 1; }
+.bg-fade { opacity: 0; z-index: -1; }
+
 .wrap{ display:grid; grid-template-columns:260px 1fr; max-width:1400px; margin:0 auto; gap:20px; padding:20px; }
 @media (max-width:900px){ .wrap{ grid-template-columns:1fr; } }
 
@@ -50,9 +56,18 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
   -webkit-mask-image: radial-gradient(135% 135% at 50% 50%, #000 78%, rgba(0,0,0,0) 100%);
           mask-image: radial-gradient(135% 135% at 50% 50%, #000 78%, rgba(0,0,0,0) 100%);
 }
+.hero::after{
+  content:"";
+  position:absolute; inset:0;
+  background: radial-gradient(60% 60% at 50% 50%, rgba(0,0,0,.15) 0%, rgba(0,0,0,.45) 70%, rgba(0,0,0,.65) 100%);
+  pointer-events:none;
+  transition: opacity .6s ease;
+}
 .slide{ position:absolute; inset:0; opacity:0; transition:opacity 1s ease-in-out; display:flex; }
 .slide.active{ opacity:1; }
-.slide img{ width:100%; height:100%; object-fit:contain; object-position:center; }
+.slide img{ width:100%; height:100%; object-fit:contain; object-position:center;
+  opacity:.8; filter:saturate(.9) brightness(.92); transition: opacity .6s ease, filter .6s ease; }
+.slide.active img{ opacity:.75; filter:saturate(.85) brightness(.9) blur(.2px); }
 .slide.duo{ display:grid; grid-template-columns:1fr 1fr; gap:10px; align-items:center; }
 .slide.duo img{ width:100%; height:100%; object-fit:cover; border-radius:8px; }
 .slide img.cover-lean{ object-fit:cover; }
@@ -61,6 +76,7 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
 .ws-card{ display:grid; gap:10px; padding:14px; border-radius:12px; border:1px solid var(--stroke); background:rgba(255,255,255,.04); margin-bottom:10px; }
 .ws-row{ display:grid; grid-template-columns:auto 1fr auto; gap:12px; align-items:center; }
 .ws-play{ width:44px; height:44px; border-radius:10px; border:1px solid var(--stroke); background:rgba(255,255,255,.06); color:var(--ink); font-size:18px; cursor:pointer; }
+.ws-play:focus { outline: 2px solid var(--accent); outline-offset: 2px; }
 .ws-wave{ height:64px; }
 .ws-time{ font-variant-numeric:tabular-nums; opacity:.9; }
 .ws-error{ font-size:.9rem; opacity:.9; color:#ffd1d1; display:none; }
@@ -77,9 +93,25 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
 .embed-16x9 iframe{ position:absolute; inset:0; width:100%; height:100%; }
 /* compact Spotify */
 .embed-spotify iframe{ width:100%; height:152px; }
+
+/* Panel tint using a per-panel CSS var */
+.panel.tint {
+  --t: 255 255 255; /* fallback RGB */
+  background:
+    linear-gradient(180deg, rgba(var(--t) / .10), rgba(var(--t) / .06)) ,
+    var(--panel);
+  border-color: rgba(var(--t) / .28);
+  box-shadow: 0 8px 30px -12px rgba(var(--t) / .20), inset 0 1px 0 rgba(255,255,255,.04);
+}
+.panel.tint h3, .panel.tint h2 { color: color-mix(in oklab, rgb(var(--t)) 70%, var(--ink)); }
 </style>
 </head>
-<body class="bg-soolo theme-soolo"><!-- swapped colors: Bio <-> Soolo -->
+
+<body class="theme-soolo"><!-- page starts in Soolo theme per your swap -->
+
+<!-- Cross-fade background layers -->
+<div class="bg-base"></div>
+<div class="bg-fade"></div>
 
 <div class="wrap">
   <aside class="sidebar">
@@ -103,12 +135,12 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
         <img class="cover-lean" src="images/Kuva 2.jpeg" alt="">
       </div>
       <div class="slide duo">
-        <img src="images/Kuva 4.jpeg" alt="">
-        <img src="images/Kuva 7.jpeg" alt="">
+        <img loading="lazy" src="images/Kuva 4.jpeg" alt="">
+        <img loading="lazy" src="images/Kuva 7.jpeg" alt="">
       </div>
-      <div class="slide"><img src="images/Kuva 5.jpeg" alt=""></div>
-      <div class="slide"><img src="images/Kuva 6.jpeg" alt=""></div>
-      <div class="slide"><img src="images/Kuva 8.jpeg" alt=""></div>
+      <div class="slide"><img loading="lazy" src="images/Kuva 5.jpeg" alt=""></div>
+      <div class="slide"><img loading="lazy" src="images/Kuva 6.jpeg" alt=""></div>
+      <div class="slide"><img loading="lazy" src="images/Kuva 8.jpeg" alt=""></div>
     </section>
 
     <div id="content-area"></div>
@@ -118,10 +150,11 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
 <script src="https://unpkg.com/wavesurfer.js@7"></script>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  /* ===== Slideshow ===== */
+  /* ===== Slideshow (respects reduced motion) ===== */
   const slides = document.querySelectorAll('.slide');
   let idx = 0;
-  if (slides.length) {
+  const prefersReduced = window.matchMedia('(prefers-reduced-motion: reduce)').matches;
+  if (slides.length && !prefersReduced) {
     setInterval(() => {
       slides[idx].classList.remove('active');
       idx = (idx + 1) % slides.length;
@@ -129,12 +162,31 @@ document.addEventListener('DOMContentLoaded', () => {
     }, 7000);
   }
 
+  /* ===== Background gradients (for cross-fade) ===== */
+  const gradients = {
+    bio:           'radial-gradient(1200px 600px at 90% 10%,  #1f1d55 0%, #2f2aa6 45%, #1b1761 100%)', // swapped
+    soolotuotanto: 'radial-gradient(1200px 600px at 10% 10%,  #0f172a 0%, #0b1220 55%, #070b12 100%)',
+    teatteri:      'radial-gradient(1200px 600px at 90% 90%,  #0a3b37 0%, #128277 40%, #072b29 100%)',
+    elektroninen:  'radial-gradient(1200px 600px at 10% 90%,  #5b0d0d 0%, #8b1e1e 40%, #2a0b0b 100%)',
+    yhteys:        'radial-gradient(1200px 600px at 50% 50%,  #2a1b1b 0%, #3f2716 45%, #1b100a 100%)'
+  };
+
+  // Initialize base bg
+  const baseLayer = document.querySelector('.bg-base');
+  const fadeLayer = document.querySelector('.bg-fade');
+  baseLayer.style.background = gradients.soolotuotanto; // initial matches theme on <body>
+
   /* ===== Robust audio URL resolver ===== */
   async function headOk(url){
     try {
       const res = await fetch(url, { method:'HEAD', cache:'no-store' });
-      return res.ok;
-    } catch(e){ return false; }
+      if (res.ok) return true;
+    } catch {}
+    // fallback: tiny ranged GET (helps on hosts that block HEAD)
+    try {
+      const res = await fetch(url, { headers:{ Range:'bytes=0-0' }, cache:'no-store' });
+      return res.ok || res.status === 206;
+    } catch { return false; }
   }
   async function resolveAudioUrl(folder, file){
     const folderCands = [folder, folder[0].toUpperCase()+folder.slice(1)]; // soolotuotanto / Soolotuotanto
@@ -159,7 +211,7 @@ document.addEventListener('DOMContentLoaded', () => {
 `<div class="ws-card" data-file="${file}" data-folder="${folder}">
   <div><strong>${title}</strong></div>
   <div class="ws-row">
-    <button class="ws-play">▶</button>
+    <button class="ws-play" aria-label="Play/Pause" title="Play/Pause" tabindex="0">▶</button>
     <div class="ws-wave"></div>
     <div class="ws-time">0:00 / 0:00</div>
   </div>
@@ -184,34 +236,50 @@ document.addEventListener('DOMContentLoaded', () => {
   function pauseOthers(except){ wsInstances.forEach(w => { if (w !== except && w.isPlaying()) w.pause(); }); }
   function destroyPlayers(){ wsInstances.forEach(w=>{ try{w.destroy()}catch(e){} }); wsInstances=[]; }
 
-  /* Build players: resolve URL first so waveform is ready; single-click play; pause others
-     + progress color uses section accent; base uses --wave-base */
-  async function wirePlayers(scope=document){
+  /* ===== Faster players: streaming backend + lazy init on scroll ===== */
+  async function wirePlayers(scope = document){
     const cards = scope.querySelectorAll('.ws-card');
-    for (const card of cards){
-      const wave=card.querySelector('.ws-wave');
-      const btn=card.querySelector('.ws-play');
-      const time=card.querySelector('.ws-time');
-      const desiredFile=card.dataset.file;
-      const folder=card.dataset.folder;
+    if (!cards.length) return;
+
+    const styles = getComputedStyle(document.body);
+    const waveBase = styles.getPropertyValue('--wave-base').trim() || 'rgba(255,255,255,0.35)';
+    const accent   = styles.getPropertyValue('--accent').trim()     || '#ffffff';
+
+    const build = async (card) => {
+      if (card._wired) return;
+      card._wired = true;
+
+      const wave = card.querySelector('.ws-wave');
+      const btn  = card.querySelector('.ws-play');
+      const time = card.querySelector('.ws-time');
+      const desiredFile = card.dataset.file;
+      const folder      = card.dataset.folder;
 
       const url = await resolveAudioUrl(folder, desiredFile);
-      if (!url){ showErr(card, 'Tiedostoa ei löytynyt', desiredFile); continue; }
+      if (!url){ showErr(card, 'Tiedostoa ei löytynyt', desiredFile); return; }
 
-      const styles = getComputedStyle(document.body);
-      const waveBase = styles.getPropertyValue('--wave-base').trim() || 'rgba(255,255,255,0.35)';
-      const accent   = styles.getPropertyValue('--accent').trim()     || '#ffffff';
+      // STREAMING backend: fast start
+      const mediaEl = new Audio();
+      mediaEl.src = url;
+      mediaEl.preload = 'metadata'; // quick duration
 
       const ws = WaveSurfer.create({
         container: wave,
-        waveColor: waveBase,      // unplayed part
-        progressColor: accent,    // played part (contrasts per section)
-        height:64, barWidth:2, barRadius:2, responsive:true,
-        url
+        media: mediaEl,            // MediaElement backend (streaming)
+        waveColor: waveBase,       // unplayed
+        progressColor: accent,     // played (contrasts per section)
+        height: 56,
+        barWidth: 2,
+        barRadius: 2,
+        responsive: true,
       });
       wsInstances.push(ws);
 
-      ws.on('ready', ()=>{ clearErr(card); time.textContent = `0:00 / ${fmtTime(ws.getDuration())}`; });
+      mediaEl.addEventListener('loadedmetadata', () => {
+        time.textContent = `0:00 / ${fmtTime(ws.getDuration())}`;
+        clearErr(card);
+      });
+
       const onTick = (t)=>{ time.textContent = `${fmtTime(t)} / ${fmtTime(ws.getDuration())}`; };
       ws.on('timeupdate', onTick);
       ws.on('audioprocess', onTick);
@@ -219,8 +287,18 @@ document.addEventListener('DOMContentLoaded', () => {
       ws.on('pause', ()=>{ btn.textContent='▶'; card.classList.remove('playing'); });
       ws.on('error', ()=>{ showErr(card, 'Soitin ei voinut avata tiedostoa.', url); });
 
-      btn.addEventListener('click', ()=>{ ws.playPause(); });
-    }
+      btn.addEventListener('click', ()=> ws.playPause(), { passive:true });
+      btn.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); ws.playPause(); }
+      });
+    };
+
+    // Only initialize when visible
+    const io = new IntersectionObserver((entries) => {
+      entries.forEach(e => { if (e.isIntersecting) build(e.target); });
+    }, { rootMargin: '200px 0px' });
+
+    cards.forEach(c => io.observe(c));
   }
 
   /* ===== Content ===== */
@@ -309,16 +387,63 @@ document.addEventListener('DOMContentLoaded', () => {
     `
   };
 
-  /* ===== Color swaps (Bio<->Soolo, Teat<->Elek) ===== */
-  const bgClass = {
-    bio:'bg-soolo', soolotuotanto:'bg-bio', teatteri:'bg-elek', elektroninen:'bg-teat', yhteys:'bg-ytx'
+  /* ===== Harmonious tint palettes for audio panels ===== */
+  const tintPalettes = {
+    bio:           [ [155,194,255], [196,226,255], [132,168,220] ],
+    soolotuotanto: [ [231,238,249], [183,166,255], [213,199,255] ],
+    teatteri:      [ [127,255,225], [98,214,190],  [180,255,238] ],
+    elektroninen:  [ [255,159,159], [255,200,200], [228,134,134] ],
+    yhteys:        [ [255,184,107], [255,206,154], [229,156,78]  ],
   };
+
+  function tintAudioPanels(cat, scope=document){
+    const panels = [...scope.querySelectorAll('.panel')].filter(p => p.querySelector('.ws-card'));
+    if (!panels.length) return;
+
+    const pals = tintPalettes[cat] || tintPalettes.bio;
+    if (panels.length === 1) {
+      // single → use the section's accent color
+      const accent = getComputedStyle(document.body).getPropertyValue('--accent').trim();
+      const tmp = document.createElement('div');
+      tmp.style.color = accent;
+      document.body.appendChild(tmp);
+      const rgb = getComputedStyle(tmp).color.match(/\d+/g).map(Number);
+      document.body.removeChild(tmp);
+      panels[0].classList.add('tint');
+      panels[0].style.setProperty('--t', `${rgb[0]} ${rgb[1]} ${rgb[2]}`);
+    } else {
+      // multiple → rotate palette
+      panels.forEach((p, i) => {
+        const [r,g,b] = pals[i % pals.length];
+        p.classList.add('tint');
+        p.style.setProperty('--t', `${r} ${g} ${b}`);
+      });
+    }
+  }
+
+  /* ===== Theme switching with smooth background cross-fade ===== */
   const themeClass = {
-    bio:'theme-soolo', soolotuotanto:'theme-bio', teatteri:'theme-elek', elektroninen:'theme-teat', yhteys:'theme-ytx'
+    bio:'theme-soolo', soolotuotanto:'theme-bio',
+    teatteri:'theme-elek', elektroninen:'theme-teat', yhteys:'theme-ytx'
   };
 
   function applyTheme(cat){
-    document.body.className = (bgClass[cat]||'bg-bio') + ' ' + (themeClass[cat]||'theme-bio');
+    const body = document.body;
+    const newTheme = themeClass[cat] || 'theme-bio';
+
+    // update theme variables
+    body.className = newTheme;
+
+    // cross-fade backgrounds
+    const newBg = gradients[cat] || gradients.soolotuotanto;
+    fadeLayer.style.background = newBg;
+    fadeLayer.style.opacity = '1';
+    setTimeout(() => {
+      baseLayer.style.background = newBg;
+      fadeLayer.style.opacity = '0';
+    }, 800);
+
+    // nav active state
     document.querySelectorAll('.cat').forEach(a => a.classList.toggle('active', a.dataset.cat===cat));
   }
 
@@ -329,6 +454,7 @@ document.addEventListener('DOMContentLoaded', () => {
     const area = document.getElementById('content-area');
     area.innerHTML = content[cat];
     destroyPlayers();
+    tintAudioPanels(cat, area);
     await wirePlayers(area);
   }
   window.addEventListener('hashchange', renderFromHash);
